Implement sync of keyboard layout between Ozone and Wayland clients

BUG=chromium:707429,b:27877642
TEST=install Crouton environment, run gtk3 apps with GDK Wayland
backend, confirmed layout is correct at first launch and after toggling
layout, confirmed no new crashes introduced (tried US, US Dvorak and
Latin American layouts). toggling layout after closing Wayland app
doesn't crash Chrome (observer released).

Review-Url: https://codereview.chromium.org/2925353002
Cr-Commit-Position: refs/heads/master@{#479825}

Former-commit-id: 2870fad48915fa547f6653e7cdd7afd04cada8fa